install/yaml/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dts
  labels:
    name: dts
    qf-istio-discovery: enabled
    qf-useistio: enabled
