install/yaml/fluentbit.yaml
---
# Source: fluentbit/templates/daemonset.yaml
# 采集数据库相关的日志
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentbit-database
  namespace: dts
  labels:
    helm.sh/chart: fluentbit-0.1.0
    app.kubernetes.io/name: fluentbit
    app.kubernetes.io/instance: fluentbit
    app.kubernetes.io/version: "1.4.5"
    app.kubernetes.io/managed-by: Helm
    type: database
    qfusion/useIstio: "true"
    mgrds/run: "master"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fluentbit
      app.kubernetes.io/instance: fluentbit
      type: database
  template:
    metadata:
      labels:
        helm.sh/chart: fluentbit-0.1.0
        app.kubernetes.io/name: fluentbit
        app.kubernetes.io/instance: fluentbit
        app.kubernetes.io/version: "1.4.5"
        app.kubernetes.io/managed-by: Helm
        type: database
    spec:
      nodeSelector: 
        namespace: dts
        qfusion/node: ""
      tolerations: 
        - effect: NoSchedule
          key: qfusion/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: qfvmi/node
          operator: Exists
      containers:
        - name: fluent-bit
          image: k8smaster.qfusion.irds/irds/fluent-bit:2.0.9.1-hcs-oem
          imagePullPolicy: Always
          ports:
            - containerPort: 2020
          command: ["/fluent-bit/bin/fluent-bit", "-c", "/fluent-bit/etc/fluent-bit-db.conf"]
          volumeMounts:
            - name: dbmotionlog
              mountPath: /opt/qfusion/localpv
            - name: varlog
              mountPath: /var/log
            - name: varlibpodcontainers
              mountPath: /var/lib/kubelet/pods
              readOnly: true
            - name: fluent-bit-config
              mountPath: /fluent-bit/etc/
            - name: containers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: limit
              mountPath: /etc/security/limits.conf
              subPath: limits
            - mountPath: /etc/localtime
              name: localtime
            - mountPath: /flb-storage
              name: storage
      terminationGracePeriodSeconds: 10
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: storage
          hostPath:
            path: /opt/dts/flb-storage
        - name: dbmotionlog
          hostPath:
            path: /opt/qfusion/localpv
        - name: varlibpodcontainers
          hostPath:
            path: /var/lib/kubelet/pods
        - name: containers
          hostPath:
              path: /var/lib/docker/containers
        - name: fluent-bit-config
          configMap:
            name: fluentbit
        - name: limit
          configMap:
            name: fluentbit
            items:
              - key: limits.conf
                path: limits
        - hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
          name: localtime
      serviceAccountName: fluent-bit
