install/yaml/dts-api-server.yaml
---
# Source: dts-api-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dts-api-server
  namespace: dts
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dts-api-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: grpc
      port: 3001
      targetPort: 3001
---
# Source: dts-api-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dts-api-server
  namespace: dts
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: dts-api-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: dts-api-server
      labels:
        app.kubernetes.io/name: dts-api-server
        qfusion/useIstio: "true"
        mgrds/run: "master"
    spec:
      serviceAccountName: dboperator
      terminationGracePeriodSeconds: 30
      affinity: 
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - dts-api-server
            topologyKey: kubernetes.io/hostname
      
      tolerations: 
        - effect: NoExecute
          key: qfusion/master
          operator: Exists
        - effect: NoExecute
          key: node-role.kubernetes.io/master
          operator: Exists
          tolerationSeconds: 60
      containers:
        - name: api
          image: k8smaster.qfusion.irds/irds/dbmotion:2310-hcs-oem
          imagePullPolicy: Always
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
            - name: log-volume
              mountPath: /dbmotion/log
            - name: dbmotion-cert-dts-apiserver
              mountPath: /etc/dbmotion-cert-dts-apiserver/tls.crt
              subPath: tls.crt
            - name: dbmotion-cert-dts-apiserver
              mountPath: /etc/dbmotion-cert-dts-apiserver/tls.key
              subPath: tls.key
            - name: dbmotion-cert-ca
              mountPath: /etc/dbmotion-cert-ca/ca.crt
              subPath: ca.crt
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: grpc
              containerPort: 3001
              protocol: TCP
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: timezone
          configMap:
            name: timezone
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: log-volume
          emptyDir: { }
        - name: dbmotion-cert-ca
          secret:
            secretName: dbmotion-cert-ca
            defaultMode: 384
            items:
              - key: ca.crt
                path: ca.crt
        - name: dbmotion-cert-dts-apiserver
          secret:
            secretName: dbmotion-cert-dts-apiserver
            defaultMode: 384
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
