install/yaml/elasticsearch.yaml
---
# Source: elasticsearch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-discovery
  namespace: dts
  labels:
    helm.sh/chart: elasticsearch-0.1.0
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elasticsearch
    app.kubernetes.io/version: "6.8.7"
    app.kubernetes.io/managed-by: Helm
spec:
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elasticsearch
  ports:
    - name: transport
      port: 9300
      protocol: TCP
    - name: db
      port: 9200
      protocol: TCP
  clusterIP: None
---
# Source: elasticsearch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
    elasticsearch-logging
  namespace: dts
  labels:
    helm.sh/chart: elasticsearch-0.1.0
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elasticsearch
    app.kubernetes.io/version: "6.8.7"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 9200
      protocol: TCP
      targetPort: db
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elasticsearch
---
# Source: elasticsearch/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  namespace: dts
  labels:
    helm.sh/chart: elasticsearch-0.1.0
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elasticsearch
    app.kubernetes.io/version: "6.8.7"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/instance: elasticsearch
  template:
    metadata:
      labels:
        qfusion/useIstio: "true"
        mgrds/run: "master"
        app.kubernetes.io/name: elasticsearch
        app.kubernetes.io/instance: elasticsearch
    spec:
      nodeSelector: 
        qfusion/master: "true"
      tolerations: 
        - effect: NoSchedule
          key: qfusion/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
      initContainers: # will always initialize before other containers
        - name: init-sysctl
          image: k8smaster.qfusion.irds/irds/alpine:3.18.2
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh","-c"," sysctl -w vm.max_map_count=262144 && chown -R 1000 /usr/share/elasticsearch/data"]
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: storage
      containers:  # specification of normal containers
        - name: es
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          image: k8smaster.qfusion.irds/irds/elasticsearch:6.8.18-hcs-oem
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
              name: db
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - curl --fail 127.0.0.1:9200/_cluster/health
            initialDelaySeconds: 20
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: storage
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              name: config
              subPath: elasticsearch.yml
      volumes:
        - name: storage
          hostPath:
            path: /opt/dts/elasticsearch 
            type: DirectoryOrCreate
        - configMap:
            defaultMode: 420
            items:
              - key: elasticsearch.yml
                path: elasticsearch.yml
            name: elasticsearch
          name: config
